feat(debts): Add history view and delete functionality
- Add history bottom sheet to view completed debts
- Enable clicking on history items to view details
- Implement delete functionality with confirmation dialog
- Update localization files (TR/EN) with missing keys
- Remove unused variables and clean up legacy code
- Refactor update method to support full model updates

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -289,5 +289,6 @@
     "youSpentLess": "أنفقت أقل",
     "youSpentMore": "أنفقت أكثر",
     "noChange": "لا تغيير",
-    "allWallets": "جميع المحافظ"
+    "allWallets": "جميع المحافظ",
+    "budgets": "Budgets"
 }
