--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -289,5 +289,6 @@
     "youSpentLess": "gastaste menos",
     "youSpentMore": "gastaste más",
     "noChange": "Sin cambios",
-    "allWallets": "Todas las Billeteras"
+    "allWallets": "Todas las Billeteras",
+    "budgets": "Presupuestos"
 }
