--- a/lib/l10n/app_id.arb
+++ b/lib/l10n/app_id.arb
@@ -303,5 +303,6 @@
     "youSpentLess": "Anda menghabiskan lebih sedikit",
     "youSpentMore": "Anda menghabiskan lebih banyak",
     "noChange": "Tidak ada perubahan",
-    "allWallets": "Semua Dompet"
+    "allWallets": "Semua Dompet",
+    "budgets": "Budgets"
 }
