--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -303,5 +303,6 @@
     "youSpentLess": "hai speso meno",
     "youSpentMore": "hai speso di più",
     "noChange": "Nessun cambiamento",
-    "allWallets": "Tutti i Portafogli"
+    "allWallets": "Tutti i Portafogli",
+    "budgets": "Budget"
 }
