--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -289,5 +289,6 @@
     "youSpentLess": "вы потратили меньше",
     "youSpentMore": "вы потратили больше",
     "noChange": "Без изменений",
-    "allWallets": "Все кошельки"
+    "allWallets": "Все кошельки",
+    "budgets": "Бюджеты"
 }
