--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -303,5 +303,6 @@
     "youSpentLess": "지출 감소",
     "youSpentMore": "지출 증가",
     "noChange": "변화 없음",
-    "allWallets": "모든 지갑"
+    "allWallets": "모든 지갑",
+    "budgets": "Budgets"
 }
