--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -289,5 +289,6 @@
     "youSpentLess": "você gastou menos",
     "youSpentMore": "você gastou mais",
     "noChange": "Sem mudanças",
-    "allWallets": "Todas as Carteiras"
+    "allWallets": "Todas as Carteiras",
+    "budgets": "Budgets"
 }
