feat: impl debt payment history, adv transaction filters & modern UI
- Added debt_payments table migration with RLS policies

- Created DebtPaymentModel and integrated payment history in DebtDetailSheet

- Implemented advanced transaction filtering (date range, categories, sorting)

- Created TransactionFilterSheet with modern filter UI

- Redesigned DebtsView header to match app theme

- Redesigned bottom navigation bar (floating style, rounded corners)

- Enhanced FAB with vibrant gradient, glow effects and border ring

- Completed localization for all 13 languages

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -290,5 +290,8 @@
     "youSpentMore": "أنفقت أكثر",
     "noChange": "لا تغيير",
     "allWallets": "جميع المحافظ",
-    "budgets": "Budgets"
+    "budgets": "Budgets",
+    "paymentHistory": "سجل الدفعات",
+    "noPaymentsYet": "لا توجد دفعات بعد",
+    "payment": "دفعة"
 }
