--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -290,5 +290,8 @@
     "youSpentMore": "您花费增加",
     "noChange": "无变化",
     "allWallets": "所有钱包",
-    "budgets": "Budgets"
+    "budgets": "Budgets",
+    "paymentHistory": "支付历史",
+    "noPaymentsYet": "尚无支付",
+    "payment": "支付"
 }
