--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -290,5 +290,8 @@
     "youSpentMore": "支出が増加",
     "noChange": "変化なし",
     "allWallets": "すべてのウォレット",
-    "budgets": "Budgets"
+    "budgets": "Budgets",
+    "paymentHistory": "支払い履歴",
+    "noPaymentsYet": "支払いはまだありません",
+    "payment": "支払い"
 }
