--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -293,5 +293,39 @@
     "budgets": "Budgets",
     "paymentHistory": "سجل الدفعات",
     "noPaymentsYet": "لا توجد دفعات بعد",
-    "payment": "دفعة"
+    "payment": "دفعة",
+    "displayName": "اسم العرض",
+    "customDateRange": "نطاق مخصص",
+    "startDate": "تاريخ البداية",
+    "endDate": "تاريخ النهاية",
+    "selectDateRange": "اختر نطاق التاريخ",
+    "transactionSummary": "ملخص المعاملات",
+    "topSpendingCategory": "أعلى إنفاق",
+    "leastSpendingCategory": "أقل إنفاق",
+    "averageTransaction": "متوسط المعاملة",
+    "weekdaySpending": "إنفاق أيام الأسبوع",
+    "weekendSpending": "إنفاق نهاية الأسبوع",
+    "vsLastMonth": "مقابل الشهر الماضي",
+    "thisWeek": "هذا الأسبوع",
+    "lastWeek": "الأسبوع الماضي",
+    "last3Months": "آخر 3 أشهر",
+    "last6Months": "آخر 6 أشهر",
+    "viewAllCategories": "عرض جميع الفئات",
+    "viewTrendDetails": "عرض تفاصيل الاتجاه",
+    "budgetTips": "نصائح الميزانية",
+    "savingsGoal": "هدف التوفير",
+    "potentialSavings": "التوفير المحتمل",
+    "noExpenseData": "لا توجد بيانات مصروفات",
+    "spendingPatterns": "أنماط الإنفاق",
+    "trendDetails": "تفاصيل الاتجاه",
+    "apply": "تطبيق",
+    "reset": "إعادة تعيين",
+    "history": "السجل",
+    "sort": "ترتيب",
+    "completedDebts": "الديون المكتملة",
+    "noCompletedDebts": "لا توجد ديون مكتملة",
+    "lent": "أقرضت",
+    "borrowed": "استلفت",
+    "deleteDebt": "حذف",
+    "deleteDebtConfirm": "هل تريد حذف هذا السجل؟ لا يمكن التراجع عن هذا الإجراء."
 }
