--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -293,5 +293,39 @@
     "budgets": "Budgets",
     "paymentHistory": "Zahlungshistorie",
     "noPaymentsYet": "Noch keine Zahlungen",
-    "payment": "Zahlung"
+    "payment": "Zahlung",
+    "displayName": "Anzeigename",
+    "customDateRange": "Eigener Zeitraum",
+    "startDate": "Startdatum",
+    "endDate": "Enddatum",
+    "selectDateRange": "Zeitraum wählen",
+    "transactionSummary": "Transaktionsübersicht",
+    "topSpendingCategory": "Höchste Ausgabe",
+    "leastSpendingCategory": "Geringste Ausgabe",
+    "averageTransaction": "Durchschn. Transaktion",
+    "weekdaySpending": "Wochentagsausgaben",
+    "weekendSpending": "Wochenendausgaben",
+    "vsLastMonth": "vs Letzter Monat",
+    "thisWeek": "Diese Woche",
+    "lastWeek": "Letzte Woche",
+    "last3Months": "Letzte 3 Monate",
+    "last6Months": "Letzte 6 Monate",
+    "viewAllCategories": "Alle Kategorien anzeigen",
+    "viewTrendDetails": "Trenddetails anzeigen",
+    "budgetTips": "Budget-Tipps",
+    "savingsGoal": "Sparziel",
+    "potentialSavings": "Mögliche Einsparungen",
+    "noExpenseData": "Keine Ausgabedaten",
+    "spendingPatterns": "Ausgabenmuster",
+    "trendDetails": "Trenddetails",
+    "apply": "Anwenden",
+    "reset": "Zurücksetzen",
+    "history": "Verlauf",
+    "sort": "Sortieren",
+    "completedDebts": "Erledigte Schulden",
+    "noCompletedDebts": "Keine erledigten Schulden",
+    "lent": "Verliehen",
+    "borrowed": "Geliehen",
+    "deleteDebt": "Löschen",
+    "deleteDebtConfirm": "Möchten Sie diesen Eintrag löschen? Dies kann nicht rückgängig gemacht werden."
 }
