--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -293,5 +293,39 @@
     "budgets": "Presupuestos",
     "paymentHistory": "Historial de pagos",
     "noPaymentsYet": "Aún no hay pagos",
-    "payment": "Pago"
+    "payment": "Pago",
+    "displayName": "Nombre visible",
+    "customDateRange": "Rango personalizado",
+    "startDate": "Fecha de inicio",
+    "endDate": "Fecha de fin",
+    "selectDateRange": "Seleccionar rango",
+    "transactionSummary": "Resumen de transacciones",
+    "topSpendingCategory": "Mayor gasto",
+    "leastSpendingCategory": "Menor gasto",
+    "averageTransaction": "Transacción promedio",
+    "weekdaySpending": "Gasto entre semana",
+    "weekendSpending": "Gasto fin de semana",
+    "vsLastMonth": "vs Mes pasado",
+    "thisWeek": "Esta semana",
+    "lastWeek": "Semana pasada",
+    "last3Months": "Últimos 3 meses",
+    "last6Months": "Últimos 6 meses",
+    "viewAllCategories": "Ver todas las categorías",
+    "viewTrendDetails": "Ver detalles de tendencia",
+    "budgetTips": "Consejos de presupuesto",
+    "savingsGoal": "Meta de ahorro",
+    "potentialSavings": "Ahorro potencial",
+    "noExpenseData": "Sin datos de gastos",
+    "spendingPatterns": "Patrones de gasto",
+    "trendDetails": "Detalles de tendencia",
+    "apply": "Aplicar",
+    "reset": "Restablecer",
+    "history": "Historial",
+    "sort": "Ordenar",
+    "completedDebts": "Deudas completadas",
+    "noCompletedDebts": "Sin deudas completadas",
+    "lent": "Prestado",
+    "borrowed": "Adeudado",
+    "deleteDebt": "Eliminar",
+    "deleteDebtConfirm": "¿Desea eliminar este registro? Esta acción no se puede deshacer."
 }
