--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -293,5 +293,39 @@
     "budgets": "Budgets",
     "paymentHistory": "Historique des paiements",
     "noPaymentsYet": "Aucun paiement pour le moment",
-    "payment": "Paiement"
+    "payment": "Paiement",
+    "displayName": "Nom affiché",
+    "customDateRange": "Plage personnalisée",
+    "startDate": "Date de début",
+    "endDate": "Date de fin",
+    "selectDateRange": "Sélectionner la plage",
+    "transactionSummary": "Résumé transactions",
+    "topSpendingCategory": "Plus grande dépense",
+    "leastSpendingCategory": "Plus petite dépense",
+    "averageTransaction": "Transaction moyenne",
+    "weekdaySpending": "Dépenses en semaine",
+    "weekendSpending": "Dépenses week-end",
+    "vsLastMonth": "vs Mois dernier",
+    "thisWeek": "Cette semaine",
+    "lastWeek": "Semaine dernière",
+    "last3Months": "3 derniers mois",
+    "last6Months": "6 derniers mois",
+    "viewAllCategories": "Voir toutes les catégories",
+    "viewTrendDetails": "Voir détails tendance",
+    "budgetTips": "Conseils budget",
+    "savingsGoal": "Objectif d'épargne",
+    "potentialSavings": "Économies potentielles",
+    "noExpenseData": "Pas de données dépenses",
+    "spendingPatterns": "Habitudes de dépenses",
+    "trendDetails": "Détails tendance",
+    "apply": "Appliquer",
+    "reset": "Réinitialiser",
+    "history": "Historique",
+    "sort": "Trier",
+    "completedDebts": "Dettes terminées",
+    "noCompletedDebts": "Aucune dette terminée",
+    "lent": "Prêté",
+    "borrowed": "Emprunté",
+    "deleteDebt": "Supprimer",
+    "deleteDebtConfirm": "Voulez-vous supprimer cet enregistrement? Cette action est irréversible."
 }
