--- a/lib/l10n/app_id.arb
+++ b/lib/l10n/app_id.arb
@@ -307,5 +307,39 @@
     "budgets": "Budgets",
     "paymentHistory": "Riwayat Pembayaran",
     "noPaymentsYet": "Belum ada pembayaran",
-    "payment": "Pembayaran"
+    "payment": "Pembayaran",
+    "displayName": "Nama Tampilan",
+    "customDateRange": "Rentang Kustom",
+    "startDate": "Tanggal Mulai",
+    "endDate": "Tanggal Selesai",
+    "selectDateRange": "Pilih Rentang",
+    "transactionSummary": "Ringkasan Transaksi",
+    "topSpendingCategory": "Pengeluaran Tertinggi",
+    "leastSpendingCategory": "Pengeluaran Terendah",
+    "averageTransaction": "Rata-rata Transaksi",
+    "weekdaySpending": "Pengeluaran Hari Kerja",
+    "weekendSpending": "Pengeluaran Akhir Pekan",
+    "vsLastMonth": "vs Bulan Lalu",
+    "thisWeek": "Minggu Ini",
+    "lastWeek": "Minggu Lalu",
+    "last3Months": "3 Bulan Terakhir",
+    "last6Months": "6 Bulan Terakhir",
+    "viewAllCategories": "Lihat Semua Kategori",
+    "viewTrendDetails": "Lihat Detail Tren",
+    "budgetTips": "Tips Anggaran",
+    "savingsGoal": "Target Tabungan",
+    "potentialSavings": "Potensi Penghematan",
+    "noExpenseData": "Tidak ada data pengeluaran",
+    "spendingPatterns": "Pola Pengeluaran",
+    "trendDetails": "Detail Tren",
+    "apply": "Terapkan",
+    "reset": "Reset",
+    "history": "Riwayat",
+    "sort": "Urutkan",
+    "completedDebts": "Hutang Selesai",
+    "noCompletedDebts": "Tidak ada hutang selesai",
+    "lent": "Dipinjamkan",
+    "borrowed": "Dipinjam",
+    "deleteDebt": "Hapus",
+    "deleteDebtConfirm": "Apakah Anda yakin ingin menghapus catatan ini? Tindakan ini tidak dapat dibatalkan."
 }
