--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -307,5 +307,39 @@
     "budgets": "Budget",
     "paymentHistory": "Cronologia pagamenti",
     "noPaymentsYet": "Nessun pagamento ancora",
-    "payment": "Pagamento"
+    "payment": "Pagamento",
+    "displayName": "Nome visualizzato",
+    "customDateRange": "Intervallo personalizzato",
+    "startDate": "Data inizio",
+    "endDate": "Data fine",
+    "selectDateRange": "Seleziona intervallo",
+    "transactionSummary": "Riepilogo transazioni",
+    "topSpendingCategory": "Spesa maggiore",
+    "leastSpendingCategory": "Spesa minore",
+    "averageTransaction": "Transaz. media",
+    "weekdaySpending": "Spese giorni feriali",
+    "weekendSpending": "Spese fine settimana",
+    "vsLastMonth": "vs Mese scorso",
+    "thisWeek": "Questa settimana",
+    "lastWeek": "Settimana scorsa",
+    "last3Months": "Ultimi 3 mesi",
+    "last6Months": "Ultimi 6 mesi",
+    "viewAllCategories": "Vedi tutte le categorie",
+    "viewTrendDetails": "Vedi dettagli trend",
+    "budgetTips": "Consigli budget",
+    "savingsGoal": "Obiettivo risparmio",
+    "potentialSavings": "Risparmio potenziale",
+    "noExpenseData": "Nessun dato spese",
+    "spendingPatterns": "Modelli di spesa",
+    "trendDetails": "Dettagli trend",
+    "apply": "Applica",
+    "reset": "Reimposta",
+    "history": "Cronologia",
+    "sort": "Ordina",
+    "completedDebts": "Debiti completati",
+    "noCompletedDebts": "Nessun debito completato",
+    "lent": "Prestato",
+    "borrowed": "Preso in prestito",
+    "deleteDebt": "Elimina",
+    "deleteDebtConfirm": "Vuoi eliminare questo record? Questa azione non può essere annullata."
 }
