--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -293,5 +293,39 @@
     "budgets": "Budgets",
     "paymentHistory": "支払い履歴",
     "noPaymentsYet": "支払いはまだありません",
-    "payment": "支払い"
+    "payment": "支払い",
+    "displayName": "表示名",
+    "customDateRange": "カスタム期間",
+    "startDate": "開始日",
+    "endDate": "終了日",
+    "selectDateRange": "期間を選択",
+    "transactionSummary": "取引概要",
+    "topSpendingCategory": "最大支出",
+    "leastSpendingCategory": "最小支出",
+    "averageTransaction": "平均取引",
+    "weekdaySpending": "平日の支出",
+    "weekendSpending": "週末の支出",
+    "vsLastMonth": "vs 先月",
+    "thisWeek": "今週",
+    "lastWeek": "先週",
+    "last3Months": "過去3ヶ月",
+    "last6Months": "過去6ヶ月",
+    "viewAllCategories": "全カテゴリを見る",
+    "viewTrendDetails": "トレンド詳細",
+    "budgetTips": "予算のヒント",
+    "savingsGoal": "貯蓄目標",
+    "potentialSavings": "節約可能額",
+    "noExpenseData": "支出データなし",
+    "spendingPatterns": "支出パターン",
+    "trendDetails": "トレンド詳細",
+    "apply": "適用",
+    "reset": "リセット",
+    "history": "履歴",
+    "sort": "並べ替え",
+    "completedDebts": "完了した債務",
+    "noCompletedDebts": "完了した債務なし",
+    "lent": "貸出",
+    "borrowed": "借入",
+    "deleteDebt": "削除",
+    "deleteDebtConfirm": "この記録を削除しますか？この操作は元に戻せません。"
 }
