--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -307,5 +307,39 @@
     "budgets": "Budgets",
     "paymentHistory": "결제 내역",
     "noPaymentsYet": "아직 결제 없음",
-    "payment": "결제"
+    "payment": "결제",
+    "displayName": "표시 이름",
+    "customDateRange": "사용자 지정 기간",
+    "startDate": "시작 날짜",
+    "endDate": "종료 날짜",
+    "selectDateRange": "기간 선택",
+    "transactionSummary": "거래 요약",
+    "topSpendingCategory": "최대 지출",
+    "leastSpendingCategory": "최소 지출",
+    "averageTransaction": "평균 거래",
+    "weekdaySpending": "평일 지출",
+    "weekendSpending": "주말 지출",
+    "vsLastMonth": "vs 지난달",
+    "thisWeek": "이번 주",
+    "lastWeek": "지난 주",
+    "last3Months": "최근 3개월",
+    "last6Months": "최근 6개월",
+    "viewAllCategories": "모든 카테고리 보기",
+    "viewTrendDetails": "추세 상세 보기",
+    "budgetTips": "예산 팁",
+    "savingsGoal": "저축 목표",
+    "potentialSavings": "잠재 절약",
+    "noExpenseData": "지출 데이터 없음",
+    "spendingPatterns": "지출 패턴",
+    "trendDetails": "추세 상세",
+    "apply": "적용",
+    "reset": "초기화",
+    "history": "기록",
+    "sort": "정렬",
+    "completedDebts": "완료된 채무",
+    "noCompletedDebts": "완료된 채무 없음",
+    "lent": "빌려줌",
+    "borrowed": "빌림",
+    "deleteDebt": "삭제",
+    "deleteDebtConfirm": "이 기록을 삭제하시겠습니까? 이 작업은 취소할 수 없습니다."
 }
