--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -293,5 +293,39 @@
     "budgets": "Budgets",
     "paymentHistory": "Histórico de pagamentos",
     "noPaymentsYet": "Ainda sem pagamentos",
-    "payment": "Pagamento"
+    "payment": "Pagamento",
+    "displayName": "Nome de exibição",
+    "customDateRange": "Período personalizado",
+    "startDate": "Data de início",
+    "endDate": "Data de fim",
+    "selectDateRange": "Selecionar período",
+    "transactionSummary": "Resumo de transações",
+    "topSpendingCategory": "Maior gasto",
+    "leastSpendingCategory": "Menor gasto",
+    "averageTransaction": "Transação média",
+    "weekdaySpending": "Gastos dias úteis",
+    "weekendSpending": "Gastos fim de semana",
+    "vsLastMonth": "vs Mês passado",
+    "thisWeek": "Esta semana",
+    "lastWeek": "Semana passada",
+    "last3Months": "Últimos 3 meses",
+    "last6Months": "Últimos 6 meses",
+    "viewAllCategories": "Ver todas as categorias",
+    "viewTrendDetails": "Ver detalhes da tendência",
+    "budgetTips": "Dicas de orçamento",
+    "savingsGoal": "Meta de economia",
+    "potentialSavings": "Economia potencial",
+    "noExpenseData": "Sem dados de despesas",
+    "spendingPatterns": "Padrões de gastos",
+    "trendDetails": "Detalhes da tendência",
+    "apply": "Aplicar",
+    "reset": "Redefinir",
+    "history": "Histórico",
+    "sort": "Ordenar",
+    "completedDebts": "Dívidas concluídas",
+    "noCompletedDebts": "Nenhuma dívida concluída",
+    "lent": "Emprestado",
+    "borrowed": "Devido",
+    "deleteDebt": "Excluir",
+    "deleteDebtConfirm": "Deseja excluir este registro? Esta ação não pode ser desfeita."
 }
