--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -293,5 +293,39 @@
     "budgets": "Бюджеты",
     "paymentHistory": "История платежей",
     "noPaymentsYet": "Платежей пока нет",
-    "payment": "Платеж"
+    "payment": "Платеж",
+    "displayName": "Отображаемое имя",
+    "customDateRange": "Свой период",
+    "startDate": "Дата начала",
+    "endDate": "Дата окончания",
+    "selectDateRange": "Выбрать период",
+    "transactionSummary": "Сводка транзакций",
+    "topSpendingCategory": "Макс. расход",
+    "leastSpendingCategory": "Мин. расход",
+    "averageTransaction": "Средняя транзакция",
+    "weekdaySpending": "Расходы в будни",
+    "weekendSpending": "Расходы в выходные",
+    "vsLastMonth": "vs Прошлый месяц",
+    "thisWeek": "Эта неделя",
+    "lastWeek": "Прошлая неделя",
+    "last3Months": "Последние 3 месяца",
+    "last6Months": "Последние 6 месяцев",
+    "viewAllCategories": "Все категории",
+    "viewTrendDetails": "Подробности тренда",
+    "budgetTips": "Советы по бюджету",
+    "savingsGoal": "Цель сбережений",
+    "potentialSavings": "Потенциальная экономия",
+    "noExpenseData": "Нет данных о расходах",
+    "spendingPatterns": "Модели расходов",
+    "trendDetails": "Детали тренда",
+    "apply": "Применить",
+    "reset": "Сбросить",
+    "history": "История",
+    "sort": "Сортировка",
+    "completedDebts": "Закрытые долги",
+    "noCompletedDebts": "Нет закрытых долгов",
+    "lent": "Одолжено",
+    "borrowed": "Взято в долг",
+    "deleteDebt": "Удалить",
+    "deleteDebtConfirm": "Удалить эту запись? Это действие необратимо."
 }
