--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -293,5 +293,39 @@
     "budgets": "Budgets",
     "paymentHistory": "支付历史",
     "noPaymentsYet": "尚无支付",
-    "payment": "支付"
+    "payment": "支付",
+    "displayName": "显示名称",
+    "customDateRange": "自定义时间",
+    "startDate": "开始日期",
+    "endDate": "结束日期",
+    "selectDateRange": "选择时间范围",
+    "transactionSummary": "交易摘要",
+    "topSpendingCategory": "最高支出",
+    "leastSpendingCategory": "最低支出",
+    "averageTransaction": "平均交易",
+    "weekdaySpending": "工作日支出",
+    "weekendSpending": "周末支出",
+    "vsLastMonth": "vs 上月",
+    "thisWeek": "本周",
+    "lastWeek": "上周",
+    "last3Months": "最近3个月",
+    "last6Months": "最近6个月",
+    "viewAllCategories": "查看全部分类",
+    "viewTrendDetails": "查看趋势详情",
+    "budgetTips": "预算建议",
+    "savingsGoal": "储蓄目标",
+    "potentialSavings": "潜在节省",
+    "noExpenseData": "无支出数据",
+    "spendingPatterns": "消费模式",
+    "trendDetails": "趋势详情",
+    "apply": "应用",
+    "reset": "重置",
+    "history": "历史",
+    "sort": "排序",
+    "completedDebts": "已完成债务",
+    "noCompletedDebts": "无已完成债务",
+    "lent": "借出",
+    "borrowed": "借入",
+    "deleteDebt": "删除",
+    "deleteDebtConfirm": "确定要删除此记录吗？此操作无法撤销。"
 }
