--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -84,6 +84,11 @@
     "creditCard": "Credit Card",
     "savings": "Savings",
     "walletAdded": "Wallet added",
+    "walletDeleted": "Wallet deleted",
+    "editWallet": "Edit Wallet",
+    "walletUpdated": "Wallet updated",
+    "deleteWallet": "Delete Wallet",
+    "deleteWalletConfirm": "Are you sure you want to delete this wallet? All transactions in this wallet will also be permanently deleted.",
     "noWallets": "No wallets yet",
     "manageWallets": "Manage Wallets",
     "categoryNotFound": "No category found",
