--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -70,6 +70,11 @@
     "creditCard": "Kredi Kartı",
     "savings": "Birikim",
     "walletAdded": "Cüzdan eklendi",
+    "walletDeleted": "Cüzdan silindi",
+    "editWallet": "Cüzdanı Düzenle",
+    "walletUpdated": "Cüzdan güncellendi",
+    "deleteWallet": "Cüzdanı Sil",
+    "deleteWalletConfirm": "Bu cüzdanı silmek istediğinize emin misiniz? Bu cüzdandaki tüm işlemler de kalıcı olarak silinecektir.",
     "noWallets": "Henüz cüzdan yok",
     "manageWallets": "Cüzdanları Yönet",
     "categoryNotFound": "Kategori bulunamadı",
